# mongo-orchestration

./: #  .gitignore  Issues.txt  README.md  README.rst  cmd_hosts.py  cmd_rs.py  daemon.py  distribute_setup.py  mongo-orchestration-windows.config  mongo-orchestration.config  mongo_setup.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  setup.cfg  setup.py
.evergreen/: config.yml
.github/workflows/: release-python.yml  test.yml
apps/: __init__.py  api.py  hosts.py  links.py  replica_sets.py  rs.py  servers.py  sh.py  sharded_clusters.py
configurations/hosts/: auth.json  clean.json  ssl.json  ssl_auth.json
configurations/replica_sets/: arbiter.json  auth.json  (+4 more)
docs/: api-doc.json  api-hosts.json
helpers/: cmd_hosts.py  cmd_rs.py  cmd_sh.py
lib/: __init__.py  common.py  compat.py  container.py  errors.py  hosts.py  process.py  replica_sets.py  rs.py  servers.py  sharded_clusters.py  shards.py  singleton.py  storage.py
modules/: hosts.py  process.py  rs.py  storage.py
mongo_orchestration/: __init__.py  _version.py  common.py  container.py  daemon.py  launch.py  launch_utils.py  process.py  replica_sets.py  server.py  servers.py  sharded_clusters.py
scripts/: launch.py  mo  mongo-orchestration-setup.ps1  mongo-orchestration-setup.sh  mongo-orchestration-start.ps1  mongo-orchestration-start.sh  mongo-orchestration-stop.ps1  mongo-orchestration-stop.sh  rs  server  server-restart  server-start  server-stop  setup-configuration  shard_clean  shard_clean~  single_with_auth  single_with_ssl_and_auth
test/: test_hosts.py  test_process.py  test_singleton.py  test_storage.py
tests/: __init__.py  test_container.py  test_hosts.py  test_launch.py  test_process.py  test_replica_set.py  test_replica_sets.py  test_rs.py  test_servers.py  test_sharded_clusters.py  test_sharding.py  test_singleton.py  test_storage.py
(+63 files in other folders)
